Bye OOCSS, Hello Gosp.css: Garlic, Onion, Salt & Peper
Code refact
 - Added prefix gosp to core variables.
 - Add white space between selector/mixin/function/@rules name and brackets.
 - Colons at end of last  sentences.
 - Commas in last map element.
 - Replaced @if flex comparison sentences with isFlex function.
 - Replaced static classes with @each loop and classmap mixin.

ClassMap
 - Added _class-mapping. This let us add loop properties classes mapping class name and value.
 - Add classmap mixin to iterate class-mapping maps.

Renamed classes
 - {$size}-text-center was renamed to {$size}-center-text.
 - {$size}-align-center was renamed to {$size}-center-align.
 - .column-reverse and .row-reverse were renamed adding as- prefix.

Columns
 - Added order classes with responsive prefixes

 Changes to be committed:
	modified:   src/style.scss
	new file:   src/util/_class-mapping.scss
	modified:   src/util/_debug.scss
	modified:   src/util/_functions.scss
	modified:   src/util/_grid.scss
	modified:   src/util/_media.scss
	modified:   src/util/_mixins.scss
	modified:   src/util/_responsive-classes.scss
	modified:   src/util/_variables.scss
	modified:   src/util/helpers/_background.scss
	modified:   src/util/helpers/_border.scss
	modified:   src/util/helpers/_box-sizing.scss
	modified:   src/util/helpers/_colors.scss
	modified:   src/util/helpers/_cursor.scss
	modified:   src/util/helpers/_display.scss
	modified:   src/util/helpers/_flex.scss
	modified:   src/util/helpers/_float.scss
	modified:   src/util/helpers/_form.scss
	modified:   src/util/helpers/_generals.scss
	modified:   src/util/helpers/_height.scss
	modified:   src/util/helpers/_list.scss
	modified:   src/util/helpers/_margin-and-padding.scss
	modified:   src/util/helpers/_opacity-and-visibility.scss
	modified:   src/util/helpers/_position.scss
	modified:   src/util/helpers/_table.scss
	modified:   src/util/helpers/_text.scss
	modified:   src/util/helpers/_vertical-align.scss
	modified:   src/util/helpers/_v

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,7 @@
 @import "util/variables";
+@import "util/class-mapping";
 @import "util/functions";
+
 @import "util/media";
 @import "util/placeholders";
 @import "util/debug";
