--- a/src/util/helpers/_flex.scss
+++ b/src/util/helpers/_flex.scss
@@ -1,75 +1,6 @@
-.jcc {
-	justify-content: center;
-}
-
-.jcfs {
-	justify-content: flex-start;
-}
-
-.jcfe {
-	justify-content: flex-end;
-}
-	
-.jcsa {
-	justify-content: space-around;
-}
-
-.jcsb {
-	justify-content: space-between;
-}
-
-.jcs {
-	justify-content: stretch;
-}
-
-.jcu {
-	justify-content: unset;
-}
-
-.aic {
-	align-items: center;
-}
-
-.aifs {
-	align-items: flex-start;
-}
-
-.aife {
-	align-items: flex-end;
-}
-
-.aiu {
-	align-items: unset;
-}
-	
-.fdr {
-	flex-direction: row;
-}
-
-.fdrr {
-	flex-direction: row-reverse;
-}
-
-.fdc {
-	flex-direction: column;
-}
-
-
-.fdcr {
-	flex-direction: column-reverse;
-}
-
-.fww {
-	flex-wrap: wrap;
-}
-	
-.fwwr {
-	flex-wrap: wrap-reverse;
-}
-
-.fwnw {
-	flex-wrap: nowrap;
-}
-
-@include class(fg, flex-grow, '', 0, 6, 1);
-@include class(fsh, flex-shrink, '', 0, 6, 1);
+@include classmap(flex-direction, $gosp-flex-direction);
+@include classmap(justify-content, $gosp-justify-content);
+@include classmap(align-items, $gosp-align-items);
+@include classmap(flex-wrap, $gosp-flex-wrap);
+@include class(fg, flex-grow, '', 0, $gosp-grid-columns / 2, 1);
+@include class(fsh, flex-shrink, '', 0, $gosp-grid-columns / 2, 1);
