--- a/src/util/helpers/_table.scss
+++ b/src/util/helpers/_table.scss
@@ -9,7 +9,7 @@
 			text-align: left;
 		}
 		td, th {
-			padding: $font-size-base/2 $font-size-base;
+			padding: $gosp-font-size-base/2 $gosp-font-size-base;
 		}
 	}
 }
