--- a/src/util/helpers/_vertical-align.scss
+++ b/src/util/helpers/_vertical-align.scss
@@ -1,15 +1,1 @@
-.vam {
-	vertical-align: middle;
-}
-
-.vat {
-	vertical-align: top;
-}
-
-.vab {
-	vertical-align: bottom;
-}
-
-.vas {
-	vertical-align: sub;
-}
+@include classmap(vertical-align, $gosp-vertical-align);
