--- a/src/util/_debug.scss
+++ b/src/util/_debug.scss
@@ -1,8 +1,8 @@
-@if ($debug) {
+@if $gosp-debug {
 /*
-	$responsive: #{$responsive};
-	$grid-system: #{$grid-system};
-	$grid-columns: #{$grid-columns};
+	$responsive: #{$gosp-responsive};
+	$grid-system: #{$gosp-grid-system};
+	$grid-columns: #{$gosp-grid-columns};
 	$breakpoints:
 		xs
 			max: #{breakpoint(xs, max)}
