--- a/src/util/_media.scss
+++ b/src/util/_media.scss
@@ -1,68 +1,66 @@
-@import "mixins";
-
-@mixin xl(){
-	@include media(xl, true, false){
+@mixin xl {
+	@include media(xl, true, false) {
 		@content;
 	}
 }
 
-@mixin lg(){
-	@include media(lg){
+@mixin lg {
+	@include media(lg) {
 		@content;
 	}
 }
 
-@mixin lg-up(){
-	@include media(lg, true, false){
+@mixin lg-up {
+	@include media(lg, true, false) {
 		@content;
 	}
 }
 
-@mixin lg-down(){
-	@include media(lg, false, true){
+@mixin lg-down {
+	@include media(lg, false, true) {
 		@content;
 	}
 }
 
-@mixin md(){
-	@include media(md){
+@mixin md {
+	@include media(md) {
 		@content;
 	}
 }
 
-@mixin md-up(){
-	@include media(md, true, false){
+@mixin md-up {
+	@include media(md, true, false) {
 		@content;
 	}
 }
 
-@mixin md-down(){
-	@include media(md, false, true){
+@mixin md-down {
+	@include media(md, false, true) {
 		@content;
 	}
 }
 
-@mixin sm(){
-	@include media(sm){
+@mixin sm {
+	@include media(sm) {
 		@content;
 	}
 }
 
-@mixin sm-up(){
-	@include media(sm, true, false){
+@mixin sm-up {
+	@include media(sm, true, false) {
 		@content;
 	}
 }
 
-@mixin sm-down(){
-	@include media(sm, false, true){
+@mixin sm-down {
+	@include media(sm, false, true) {
 		@content;
 	}
 }
 
 
-@mixin xs(){
-	@include media(xs, false, true){
+@mixin xs {
+	@include media(xs, false, true) {
 		@content;
 	}
 }
