--- a/src/util/_variables.scss
+++ b/src/util/_variables.scss
@@ -1,9 +1,9 @@
-$debug: true;
-$responsive: true;
-$grid-system: 'flex'; // flex | float | inline | fractions
-$grid-columns: 12;
+$gosp-debug: true;
+$gosp-responsive: true;
+$gosp-grid-system: 'flex'; // flex | float | inline | fractions
+$gosp-grid-columns: 12;
 
-$breakpoints: (
+$gosp-breakpoints: (
 	xs: (max: em(480px)),
 	sm: (min: em(481px), max: em(768px)),
 	md: (min: em(769px), max: em(1280px)),
@@ -11,69 +11,26 @@ $breakpoints: (
 	xl: (min: em(1601px))
 );
 
-$colors: (
-	0: #000,
-	3: #333,
-	6: #666,
-	9: #999,
-	A: #AAA,
-	C: #CCC,
-	E: #EEE,
-	F: #FFF
-);
+$gosp-font-family-sans-serif:  "Helvetica Neue", Helvetica, Arial, sans-serif;
+$gosp-font-family-serif:       Georgia, "Times New Roman", Times, serif;
+$gosp-font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
+$gosp-font-family-base:        $gosp-font-family-sans-serif;
 
-$borders: (
-	s: solid,
-	w: wavy,
-	da: dashed,
-	do: dotted
-);
+$gosp-font-size-base:          16px;
+$gosp-font-size-large:         ceil(($gosp-font-size-base * 1.25)); // ~18px
+$gosp-font-size-small:         ceil(($gosp-font-size-base * 0.85)); // ~12px
 
-$sides: (
-	t: top,
-	l: left,
-	r: right,
-	b: bottom
-);
+$gosp-font-size-h1:            floor(($gosp-font-size-base * 2.6)); // ~36px
+$gosp-font-size-h2:            floor(($gosp-font-size-base * 2.15)); // ~30px
+$gosp-font-size-h3:            ceil(($gosp-font-size-base * 1.7)); // ~24px
+$gosp-font-size-h4:            ceil(($gosp-font-size-base * 1.25)); // ~18px
+$gosp-font-size-h5:            $gosp-font-size-base;
+$gosp-font-size-h6:            ceil(($gosp-font-size-base * 0.85)); // ~12px
 
-$cursors: (
-	d: default,
-	p: pointer,
-	t: text, 
-	w: wait,
-	na: not-allowed
-);
+$gosp-line-height-base:        1.428571429; // 20/14
+$gosp-line-height-computed:    floor(($gosp-font-size-base * $gosp-line-height-base)); // ~20px
 
-$font-family-sans-serif:  "Helvetica Neue", Helvetica, Arial, sans-serif;
-$font-family-serif:       Georgia, "Times New Roman", Times, serif;
-$font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
-$font-family-base:        $font-family-sans-serif;
-
-$font-size-base:          16px;
-$font-size-large:         ceil(($font-size-base * 1.25)); // ~18px
-$font-size-small:         ceil(($font-size-base * 0.85)); // ~12px
-
-$font-size-h1:            floor(($font-size-base * 2.6)); // ~36px
-$font-size-h2:            floor(($font-size-base * 2.15)); // ~30px
-$font-size-h3:            ceil(($font-size-base * 1.7)); // ~24px
-$font-size-h4:            ceil(($font-size-base * 1.25)); // ~18px
-$font-size-h5:            $font-size-base;
-$font-size-h6:            ceil(($font-size-base * 0.85)); // ~12px
-
-$headings: (
-	1: $font-size-h1,
-	2: $font-size-h2,
-	3: $font-size-h3,
-	4: $font-size-h4,
-	5: $font-size-h5,
-	6: $font-size-h6
-);
-
-
-$line-height-base:        1.428571429; // 20/14
-$line-height-computed:    floor(($font-size-base * $line-height-base)); // ~20px
-
-$headings-font-family:    inherit;
-$headings-font-weight:    500;
-$headings-line-height:    1.1;
-$headings-color:          inherit;
+$gosp-headings-font-family:    inherit;
+$gosp-headings-font-weight:    500;
+$gosp-headings-line-height:    1.1;
+$gosp-headings-color:          inherit;
