--- a/src/util/helpers/_position.scss
+++ b/src/util/helpers/_position.scss
@@ -1,23 +1,9 @@
-.pr { 
-	position: relative;
-}
+@include classmap(position, $gosp-position);
+@include class(t, top, px, 0, 50, 5);
+@include class(l, left, px, 0, 50, 5);
+@include class(r, right, px, 0, 50, 5);
+@include class(b, bottom, px, 0, 50, 5);
 
-.ps {
-	position: static;
-}
-	
-.pa {
-	position: absolute;
-}
-	
-.pu {
-	position: unset;
-}
-	
-.pf {
-	position: fixed;
-}
-	
 .abs {
 	@extend .pa;
 	top: 0;
@@ -27,8 +13,3 @@
 	width: 100%;
 	height: 100%;
 }
-
-@include class(t, top, px, 0, 50, 5);
-@include class(l, left, px, 0, 50, 5);
-@include class(r, right, px, 0, 50, 5);
-@include class(b, bottom, px, 0, 50, 5);
