--- a/src/util/_config.scss
+++ b/src/util/_config.scss
@@ -1,4 +1,4 @@
-$gosp-debug: true;
+$gosp-version: "1.0.0";
 $gosp-responsive: true;
 $gosp-grid-system: 'flex'; // flex | float | inline | fractions
 $gosp-grid-columns: 12;
