Added changelog, minor fixes and new mixin.
 Changes to be committed:
	new file:   changelog.md
	modified:   dist/gosp.css
	modified:   dist/gosp.css.map
	modified:   dist/gosp.min.css
	modified:   dist/gosp.min.css.map
	modified:   src/util/_functions.scss
	modified:   src/util/_mixins.scss
	modified:   src/util/_responsive-classes.scss
	modified:   src/util/helpers/_list.scss

--- a/src/util/_functions.scss
+++ b/src/util/_functions.scss
@@ -29,3 +29,7 @@
 @function isFlex() {
 	@return $gosp-grid-system == flex;
 }
+
+@function in($list, $element) {
+	@return map-has-key($list, $element);
+}
