--- a/src/util/_mixins.scss
+++ b/src/util/_mixins.scss
@@ -230,3 +230,9 @@
 		}
 	}
 }
+
+@mixin list-columns($columns, $prefix: null) {
+	.list-columns-#{if($prefix, $prefix + '-', '') + $columns} {
+		columns: $columns;
+	}
+}
