Restored auto columns (deleted by mistake)
* Added flex order clases
* Readme updated
* Update 1.0.4

 Changes to be committed:
	modified:   README.md
	modified:   changelog.md
	modified:   dist/gosp.css
	modified:   dist/gosp.css.map
	modified:   dist/gosp.min.css
	modified:   dist/gosp.min.css.map
	modified:   src/util/_config.scss
	modified:   src/util/helpers/_flex.scss

--- a/src/util/helpers/_flex.scss
+++ b/src/util/helpers/_flex.scss
@@ -6,3 +6,4 @@
 @include classmap(flex-wrap, $gosp-flex-wrap);
 @include class(fg, flex-grow, '', 0, $gosp-grid-columns / 2, 1);
 @include class(fsh, flex-shrink, '', 0, $gosp-grid-columns / 2, 1);
+@include class(ord, order, '', -1, $gosp-grid-columns, 1);
