--- a/src/util/_mixins.scss
+++ b/src/util/_mixins.scss
@@ -198,7 +198,7 @@
 		}
 	}
 	
-	@if not isFlex() and not $gosp-grid-fractionary {
+	@if not $gosp-grid-fractionary {
 		@for $item from 0 through $columns {
 			.col-#{$size}-push-#{$item} {
 				left: percentage($item/$columns);
